开始了解Android运行时权限申请

--- a/MwStudyDemo/settings.gradle
+++ b/MwStudyDemo/settings.gradle
@@ -1,1 +1,1 @@
-include ':useumengdemo', ':PushSDK', ':runtimepermissiondemo'
+include ':useumengdemo', ':PushSDK', ':runtimepermissiondemo', ':android5xdemo'
