使用洪洋开源的动态申请权限的框架

--- a/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
+++ b/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Basicctivity"
+            android:name=".BasicActivity"
             android:label="@string/title_activity_basicctivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
