--- a/MwStudyDemo/runtimepermissiondemo/build.gradle
+++ b/MwStudyDemo/runtimepermissiondemo/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
@@ -22,8 +23,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.zhy:mpermission-compiler:1.0.0'
 
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.zhy:mpermission-api:1.0.0'
+    compile 'com.android.support:design:24.1.1'
 }
