--- a/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
+++ b/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
@@ -12,12 +12,17 @@
             android:name=".BasicActivity"
             android:label="@string/title_activity_basicctivity"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".UseRecyclerActivity" />
+        <activity android:name=".ShareAnimatorActA">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ShareAnimatorActB"></activity>
     </application>
 
 </manifest>
