--- a/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
+++ b/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
@@ -10,12 +10,13 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".BasicActivity"
-            android:label="@string/title_activity_basicctivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".UseRecyclerActivity" />
-        <activity android:name=".ShareAnimatorActA"></activity>
+        <activity android:name=".ShareAnimatorActA" />
         <activity android:name=".ShareAnimatorActB" />
-        <activity android:name=".RippleActivity">
+        <activity android:name=".RippleActivity"></activity>
+        <activity android:name=".ThemeToolBarActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
