toolbar的回顾与知新

--- a/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
+++ b/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
@@ -14,14 +14,25 @@
         <activity android:name=".UseRecyclerActivity" />
         <activity android:name=".ShareAnimatorActA" />
         <activity android:name=".ShareAnimatorActB" />
-        <activity android:name=".RippleActivity"></activity>
-        <activity android:name=".ThemeToolBarActivity"
+        <activity android:name=".RippleActivity" />
+        <activity
+            android:name=".ThemeToolBarActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MyNavigationActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
     </application>
 
