--- a/MwStudyDemo/android5xdemo/build.gradle
+++ b/MwStudyDemo/android5xdemo/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
 }
