通知的简单使用

--- a/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
+++ b/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
@@ -14,24 +14,23 @@
         <activity android:name=".UseRecyclerActivity" />
         <activity android:name=".ShareAnimatorActA" />
         <activity android:name=".ShareAnimatorActB" />
-        <activity android:name=".RippleActivity" />
-        <activity
-            android:name=".ThemeToolBarActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".MyNavigationActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".RippleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
+            android:name=".ThemeToolBarActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MyNavigationActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".NotificationActivity">
 
         </activity>
     </application>
