--- a/MwStudyDemo/settings.gradle
+++ b/MwStudyDemo/settings.gradle
@@ -1,1 +1,1 @@
-include ':useumengdemo', ':PushSDK', ':runtimepermissiondemo', ':android5xdemo', ':interestingpolldemo'
+include ':useumengdemo', ':PushSDK', ':runtimepermissiondemo', ':android5xdemo', ':interestingpolldemo', ':AnimatorDemoGitHub'
