--- a/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
+++ b/MwStudyDemo/android5xdemo/src/main/AndroidManifest.xml
@@ -15,23 +15,25 @@
         <activity android:name=".ShareAnimatorActA" />
         <activity android:name=".ShareAnimatorActB" />
         <activity android:name=".RippleActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ThemeToolBarActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MyNavigationActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".NotificationActivity">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".DayNightActivity"
+            android:theme="@style/myDayNightTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
